crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..38,
            value: FString(
                ExprFString {
                    range: 0..38,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 2..6,
                                value: Str(
                                    StringConstant {
                                        value: "mix ",
                                        implicit_concatenated: false,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 6..13,
                                value: Name(
                                    ExprName {
                                        range: 7..11,
                                        id: "user",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: Some(
                                    DebugText {
                                        leading: "",
                                        trailing: "=",
                                    },
                                ),
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 13..28,
                                value: Str(
                                    StringConstant {
                                        value: " with text and ",
                                        implicit_concatenated: false,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 28..37,
                                value: Name(
                                    ExprName {
                                        range: 29..35,
                                        id: "second",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: Some(
                                    DebugText {
                                        leading: "",
                                        trailing: "=",
                                    },
                                ),
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                    ],
                    implicit_concatenated: false,
                },
            ),
        },
    ),
]
