crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_parse_self_documenting_format.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..14,
            value: FString(
                ExprFString {
                    range: 0..14,
                    values: [
                        FormattedValue(
                            ExprFormattedValue {
                                range: 2..13,
                                value: Name(
                                    ExprName {
                                        range: 3..7,
                                        id: "user",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: Some(
                                    DebugText {
                                        leading: "",
                                        trailing: "=",
                                    },
                                ),
                                conversion: None,
                                format_spec: Some(
                                    FString(
                                        ExprFString {
                                            range: 9..12,
                                            values: [
                                                Constant(
                                                    ExprConstant {
                                                        range: 9..12,
                                                        value: Str(
                                                            StringConstant {
                                                                value: ">10",
                                                                implicit_concatenated: false,
                                                            },
                                                        ),
                                                        kind: None,
                                                    },
                                                ),
                                            ],
                                            implicit_concatenated: false,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    implicit_concatenated: false,
                },
            ),
        },
    ),
]
