crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..18,
            value: FString(
                ExprFString {
                    range: 0..18,
                    values: [
                        FormattedValue(
                            ExprFormattedValue {
                                range: 2..5,
                                value: Name(
                                    ExprName {
                                        range: 3..4,
                                        id: "a",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 5..10,
                                value: Name(
                                    ExprName {
                                        range: 7..8,
                                        id: "b",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 10..17,
                                value: Str(
                                    StringConstant {
                                        value: "{foo}",
                                        implicit_concatenated: false,
                                    },
                                ),
                                kind: None,
                            },
                        ),
                    ],
                    implicit_concatenated: false,
                },
            ),
        },
    ),
]
