crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_nested_concatenation_string_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..16,
            value: FString(
                ExprFString {
                    range: 0..16,
                    values: [
                        FormattedValue(
                            ExprFormattedValue {
                                range: 2..15,
                                value: Name(
                                    ExprName {
                                        range: 3..6,
                                        id: "foo",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: Some(
                                    FString(
                                        ExprFString {
                                            range: 7..14,
                                            values: [
                                                FormattedValue(
                                                    ExprFormattedValue {
                                                        range: 7..14,
                                                        value: Constant(
                                                            ExprConstant {
                                                                range: 8..13,
                                                                value: Str(
                                                                    StringConstant {
                                                                        value: "",
                                                                        implicit_concatenated: true,
                                                                    },
                                                                ),
                                                                kind: None,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            implicit_concatenated: false,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    implicit_concatenated: false,
                },
            ),
        },
    ),
]
