crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_nested_string_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: FString(
                ExprFString {
                    range: 0..13,
                    values: [
                        FormattedValue(
                            ExprFormattedValue {
                                range: 2..12,
                                value: Name(
                                    ExprName {
                                        range: 3..6,
                                        id: "foo",
                                        ctx: Load,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: Some(
                                    FString(
                                        ExprFString {
                                            range: 7..11,
                                            values: [
                                                FormattedValue(
                                                    ExprFormattedValue {
                                                        range: 7..11,
                                                        value: Constant(
                                                            ExprConstant {
                                                                range: 8..10,
                                                                value: Str(
                                                                    StringConstant {
                                                                        value: "",
                                                                        implicit_concatenated: false,
                                                                    },
                                                                ),
                                                                kind: None,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            implicit_concatenated: false,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    implicit_concatenated: false,
                },
            ),
        },
    ),
]
