crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_not_equals.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..11,
            value: FString(
                ExprFString {
                    range: 0..11,
                    values: [
                        FormattedValue(
                            ExprFormattedValue {
                                range: 2..10,
                                value: Compare(
                                    ExprCompare {
                                        range: 3..9,
                                        left: Constant(
                                            ExprConstant {
                                                range: 3..4,
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                        ops: [
                                            NotEq,
                                        ],
                                        comparators: [
                                            Constant(
                                                ExprConstant {
                                                    range: 8..9,
                                                    value: Int(
                                                        2,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                    ],
                    implicit_concatenated: false,
                },
            ),
        },
    ),
]
